--- a/starter/index.html
+++ b/starter/index.html
@@ -29,7 +29,116 @@
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <!-- utility class that has one goal to center the text -->
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quis
+              repellat. Nobis corrupti ipsa explicabo animi provident.
+              Temporibus vero fugiat aliquid eaque. Veritatis optio, culpa
+              facere velit quae cum! Totam!
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, quis
+              repellat. Nobis corrupti ipsa explicabo animi provident.
+              Temporibus vero fugiat aliquid eaque. Veritatis optio, culpa
+              facere velit quae cum! Totam!
+            </p>
 
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img
+                src="img/nat-1-large.jpg"
+                alt="photo1"
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="img/nat-2-large.jpg"
+                alt="photo2"
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="img/nat-3-large.jpg"
+                alt="photo3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor
+                eum veritatis nemo explicabo adipisci esse officia eaque vitae
+                ratione alias!
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                meet nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor
+                eum veritatis nemo explicabo adipisci esse officia eaque vitae
+                ratione alias!
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor
+                eum veritatis nemo explicabo adipisci esse officia eaque vitae
+                ratione alias!
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live a healthier life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor
+                eum veritatis nemo explicabo adipisci esse officia eaque vitae
+                ratione alias!
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- 
     <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
@@ -59,6 +168,6 @@
         <div class="col-1-of-4">Col 1 of 4</div>
         <div class="col-3-of-4">Col 3 of 4</div>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
